Fixed faves corner being too low

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -132,7 +132,7 @@ a.btn {
     //padding: 12px;
 	.fave_controls{
 		position: absolute;
-		bottom: 65px;
+		bottom: 66px;
 		width: 0;
 		height: 0;
 		//border-bottom: 90px solid $red;
